tests/rosetta/out/Pascal/amicable-pairs.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/amicable-pairs.pas
amicable-pairs.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
amicable-pairs.pas(33,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
amicable-pairs.pas(40,13) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "LongInt"
amicable-pairs.pas(82,13) Error: Operator is not overloaded: "TArray$1$crcE41905E8" > "LongInt"
amicable-pairs.pas(82,25) Error: Operator is not overloaded: "TArray$1$crcE41905E8" < "SmallInt"
amicable-pairs.pas(82,82) Error: Incompatible type for arg no. 2: Got "TArray$1$crcE41905E8", expected "LongInt"
amicable-pairs.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
amicable-pairs.pas(90) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
